--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 archivesBaseName = "nbtcrafting"
-version = "1.1.0-beta.1"
+version = "1.1.0"
 
 minecraft {
 }
