--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,17 @@
-org.gradle.jvmargs=-Xmx4g
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
+
+# Fabric Properties
+	# check these on https://fabricmc.net/use
+	minecraft_version=19w09a
+	yarn_mappings=19w09a.4
+	loader_version=0.3.7.109
+
+# Mod Properties
+	mod_version = 1.1.2
+	maven_group = de.siphalor
+	archives_base_name = nbtcrafting
+
+# Dependencies
+	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
+	#fabric_version=0.2.1.94
