--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=19w09a
-	yarn_mappings=19w09a.4
+	minecraft_version=19w11b
+	yarn_mappings=19w11b.4
 	loader_version=0.3.7.109
 
 # Mod Properties
-	mod_version = 1.1.2
+	mod_version = 1.1.3
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
