--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=19w12a
-	yarn_mappings=19w12a.1
+	minecraft_version=19w12b
+	yarn_mappings=19w12b.5
 	loader_version=0.3.7.109
 
 # Mod Properties
-	mod_version = 1.1.4
+	mod_version = 1.1.5
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
