--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=19w12b
-	yarn_mappings=19w12b.5
-	loader_version=0.3.7.109
+	minecraft_version=19w14b
+	yarn_mappings=19w14b.4
+	loader_version=0.4.0+build.114
 
 # Mod Properties
-	mod_version = 1.1.5
+	mod_version = 1.1.6
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
