--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.0-SNAPSHOT'
+	id 'fabric-loom' version '0.2.1-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -20,7 +20,8 @@ dependencies {
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	//modCompile "net.fabricmc:fabric:${project.fabric_version}"
+	include "net.fabricmc:fabric:${project.fabric_version}"
+	modCompile "net.fabricmc:fabric:${project.fabric_version}"
 }
 
 processResources {
