--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+mixin.debug=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14 Pre-Release 3
-	yarn_mappings=1.14 Pre-Release 3+build.1
-	loader_version=0.4.1+build.126
+	minecraft_version=1.14
+	yarn_mappings=1.14+build.1
+	loader_version=0.4.2+build.132
 
 # Mod Properties
-	mod_version = 1.1.8
+	mod_version = 1.1.9+1.14
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version=0.2.7+build.123
+	fabric_version=0.2.7+build.127
