--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,18 @@ group = project.maven_group
 minecraft {
 }
 
+repositories {
+	maven { url "https://minecraft.curseforge.com/api/maven" }
+}
+
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modCompile "net.fabricmc:fabric:${project.fabric_version}"
+	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modCompile "me.shedaniel:RoughlyEnoughItems:${project.rei_version}"
 }
 
 processResources {
