--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,15 @@ mixin.debug=true
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.14.1
-	yarn_mappings=1.14.1+build.5
-	loader_version=0.4.7+build.147
+	yarn_mappings=1.14.1+build.10
+	loader_version=0.4.7+build.148
 
 # Mod Properties
-	mod_version = 1.1.13+1.14
+	mod_version = 1.1.14+1.14
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version=+
+	fabric_version = +
+	rei_version = 2.9.1+build.116
