--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,11 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modCompile "net.fabricmc.fabric-api:fabric-api-base:${project.fabric_version}"
+	include "net.fabricmc.fabric-api:fabric-api-base:${project.fabric_version}"
+	modCompile "net.fabricmc.fabric-api:fabric-networking-v0:${project.fabric_version}"
+	include "net.fabricmc.fabric-api:fabric-networking-v0:${project.fabric_version}"
+	
 	modCompile "me.shedaniel:RoughlyEnoughItems:${project.rei_version}"
 }
 
