--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,16 @@
+# suppress inspection "UnusedProperty" for whole file
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-mixin.debug=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.2
-	yarn_mappings=1.14.2+build.2
+	minecraft_version=1.14.3-pre2
+	yarn_mappings=13
 	loader_version=0.4.8+build.154
 
 # Mod Properties
-	mod_version = 1.1.16+1.14.2
+	mod_version = 1.2.0
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
-	fabric_version = +
-	rei_version = 2.9.1+build.116
