--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.3-pre2
-	yarn_mappings=13
-	loader_version=0.4.8+build.154
+	minecraft_version=1.14.4
+	yarn_mappings=2
+	loader_version=0.4.8+build.157
 
 # Mod Properties
-	mod_version = 1.2.0
+	mod_version = 1.2.1
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
