--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=2
-	loader_version=0.4.8+build.157
+	minecraft_version=19w41a
+	yarn_mappings=3
+	loader_version=0.6.3+build.167
 
 # Mod Properties
 	mod_version = 1.2.5
