--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=19w42a
-	yarn_mappings=1
-	loader_version=0.6.3+build.167
+	minecraft_version=1.15-pre1
+	yarn_mappings=3:v2
+	loader_version=0.7.1+build.173
 
 # Mod Properties
-	mod_version = 1.2.5
+	mod_version = 1.2.6
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
