--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.1-pre1
+	minecraft_version=1.15.1
 	yarn_mappings=1:v2
 	loader_version=0.7.2+build.174
 
 # Mod Properties
-	mod_version = 1.2.7
+	mod_version = 1.2.8
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
