--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.7.2+build.174
 
 # Mod Properties
-	mod_version = 1.2.10-rc.0
+	mod_version = 2.0.0-alpha.0
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
