--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.15.2
-	yarn_mappings=7:v2
-	loader_version=0.7.6+build.180
+	minecraft_version=20w10a
+	yarn_mappings=2:v2
+	loader_version=0.7.8+build.186
 
 # Mod Properties
 	mod_version = 2.0.0-alpha.16
