--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=20w10a
-	yarn_mappings=2:v2
-	loader_version=0.7.8+build.186
+	minecraft_version=20w12a
+	yarn_mappings=12:v2
+	loader_version=0.7.8+build.188
 
 # Mod Properties
-	mod_version = 2.0.0-alpha.20
+	mod_version = 2.0.0-alpha.21+i-hate-rei
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
