--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.7-SNAPSHOT'
+	id 'fabric-loom' version '0.4.12'
 	id 'maven-publish'
 }
 
@@ -26,19 +26,22 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_mappings}"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modCompile "net.fabricmc.fabric-api:fabric-api-base:0.1.3+12a8474ce8"
-	include "net.fabricmc.fabric-api:fabric-api-base:0.1.3+12a8474c88"
-	modCompile "net.fabricmc.fabric-api:fabric-networking-v0:0.1.9+1a47cd78e8"
-	include "net.fabricmc.fabric-api:fabric-networking-v0:0.1.9+1a47cd78e8"
+	modCompile "net.fabricmc.fabric-api:fabric-api-base:0.1.3+12a8474cb2"
+	include "net.fabricmc.fabric-api:fabric-api-base:0.1.3+12a8474cb2"
+	modCompile "net.fabricmc.fabric-api:fabric-networking-v0:0.1.9+1a47cd78b2"
+	include "net.fabricmc.fabric-api:fabric-networking-v0:0.1.9+1a47cd78b2"
 
-	modImplementation "net.fabricmc.fabric-api:fabric-registry-sync-v0:0.3.1+686e6e57e8"
+	modImplementation "net.fabricmc.fabric-api:fabric-registry-sync-v0:0.3.5+dd263ccab2"
 
-	modImplementation "net.fabricmc.fabric-api:fabric-tag-extensions-v0:0.2.4+2fd224cae8"
+	modImplementation "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.2.3+f6620c48b2"
+	modImplementation "net.fabricmc.fabric-api:fabric-tag-extensions-v0:0.2.4+2fd224cab2"
 
-	modCompileOnly "me.shedaniel:RoughlyEnoughItems:4+"
+	modCompileOnly("me.shedaniel:RoughlyEnoughItems:4+") {
+		exclude group: "net.fabricmc.fabric-api"
+	}
 
 	modImplementation("com.github.Siphalor:ModsOfTheWorld:1.16-SNAPSHOT") {
-		exclude group: "net.fabricmc:fabric-api"
+		exclude group: "net.fabricmc.fabric-api"
 	}
 }
 
