--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=20w18a
-	yarn_mappings=9:v2
-	loader_version=0.8.2+build.194
+	minecraft_version=1.16-pre2
+	yarn_mappings=1:v2
+	loader_version=0.8.7+build.201
 
 # Mod Properties
 	mod_version = 2.0.0-alpha.30
