--- a/build.gradle
+++ b/build.gradle
@@ -26,15 +26,26 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_mappings}"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modCompile "net.fabricmc.fabric-api:fabric-api-base:0.1.3+12a8474cb2"
-	include "net.fabricmc.fabric-api:fabric-api-base:0.1.3+12a8474cb2"
-	modCompile "net.fabricmc.fabric-api:fabric-networking-v0:0.1.9+1a47cd78b2"
-	include "net.fabricmc.fabric-api:fabric-networking-v0:0.1.9+1a47cd78b2"
+	def fabric_deps = [
+	        'fabric-api-base': '0.1.3+12a8474cb0',
+			'fabric-networking-v0': '0.1.9+1a47cd78b0',
+			'include': false,
+			'fabric-registry-sync-v0': '0.3.8+7dba2d6cb0',
+			'fabric-resource-loader-v0': '0.2.5+059ea866b0',
+			'fabric-tag-extensions-v0': '0.2.5+5a6e8f4cb0'
+	]
 
-	modImplementation "net.fabricmc.fabric-api:fabric-registry-sync-v0:0.3.5+dd263ccab2"
-
-	modImplementation "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.2.3+f6620c48b2"
-	modImplementation "net.fabricmc.fabric-api:fabric-tag-extensions-v0:0.2.4+2fd224cab2"
+	def inc = true
+	for (entry in fabric_deps.entrySet()) {
+		if (entry.getKey() == "include") {
+			inc = entry.getValue()
+			continue
+		}
+        modImplementation 'net.fabricmc.fabric-api:' + entry.getKey() + ':' + entry.getValue()
+		if (inc) {
+			include 'net.fabricmc.fabric-api:' + entry.getKey() + ':' + entry.getValue()
+		}
+	}
 
 	modCompileOnly("me.shedaniel:RoughlyEnoughItems:4+") {
 		exclude group: "net.fabricmc.fabric-api"
