--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.1
-	yarn_mappings=4:v2
-	loader_version=0.8.8+build.202
+	minecraft_version=1.16.2-pre1
+	yarn_mappings=7:v2
+	loader_version=0.9.0+build.204
 
 # Mod Properties
 	mod_version = 2.0.0-beta.1
