--- a/build.gradle
+++ b/build.gradle
@@ -64,19 +64,20 @@ tasks.withType(JavaCompile) {
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
+    archiveClassifier.set("sources")
 	from sourceSets.main.allSource
 }
 
 jar {
 	from "LICENSE"
-	classifier = ""
+	archiveClassifier.set("")
 }
 
 // configure the maven publication
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
+			artifactId = "${project.archives_base_name}-${project.minecraft_major_version}"
 			// add all the jars that should be included when publishing to maven
 			artifact(remapJar) {
 				builtBy remapJar
@@ -86,10 +87,15 @@ publishing {
 			}
 		}
 	}
-
-	// select the repositories you want to publish to
 	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
+		maven {
+			name = "Siphalor"
+			url = "https://maven.siphalor.de/upload.php"
+			//authentication(BasicAuthentication)
+			credentials {
+				username = siphalorMavenUser
+				password = siphalorMavenPassword
+			}
+		}
 	}
 }
