--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.15.2
+	minecraft_major_version = 1.15
 	yarn_mappings=7:v2
 	loader_version=0.7.6+build.180
 
