Fix gradle crash when no maven user/password is defined for publication

--- a/build.gradle
+++ b/build.gradle
@@ -98,12 +98,14 @@ publishing {
 		}
 	}
 	repositories {
-		maven {
-			name = "Siphalor"
-			url = "https://maven.siphalor.de/upload.php"
-			credentials {
-				username = siphalorMavenUser
-				password = siphalorMavenPassword
+		if (project.hasProperty("siphalorMavenUser")) {
+			maven {
+				name = "Siphalor"
+				url = "https://maven.siphalor.de/upload.php"
+				credentials {
+					username = siphalorMavenUser
+					password = siphalorMavenPassword
+				}
 			}
 		}
 	}
