--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.2-pre1
+	minecraft_version=1.16.4
 	minecraft_major_version = 1.16
-	yarn_mappings=7:v2
+	yarn_mappings=1:v2
 	loader_version=0.9.0+build.204
 
 # Mod Properties
