--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.4
-	minecraft_major_version = 1.16
+	minecraft_version=20w45a
+	minecraft_major_version = 1.17
 	yarn_mappings=1:v2
 	loader_version=0.9.0+build.204
 
