--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'fabric-loom' version '0.4-SNAPSHOT'
 	id 'maven-publish'
+	id 'org.cadixdev.licenser' version '0.5.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -48,6 +49,12 @@ dependencies {
 	}
 
 	testmodCompile sourceSets.main.output
+}
+
+license {
+	header = project.file('LICENSE_HEADER')
+
+	include '**/*.java'
 }
 
 processResources {
