--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=20w46a
+	minecraft_version=20w51a
 	minecraft_major_version = 1.17
-	yarn_mappings=2:v2
-	loader_version=0.9.0+build.204
+	yarn_mappings=18:v2
+	loader_version=0.10.8
 
 # Mod Properties
 	mod_version = 2.0.3
 	mod_release = release
-	mod_mc_version_specifier = 20w46a+
-	mod_mc_versions = 20w46a;20w48a;20w49a;20w51a
+	mod_mc_version_specifier = 20w49a+
+	mod_mc_versions = 20w49a;20w51a
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
