--- a/build.gradle
+++ b/build.gradle
@@ -146,11 +146,12 @@ task uploadToModSites {
 if (project.hasProperty("siphalorCurseForgeApi")) {
 	curseforge {
 		apiKey project.siphalorCurseForgeApi
+		def changes = getChangelog()
 		project {
 			id = "314633"
 			releaseType = project.mod_release
 			changelogType = "markdown"
-			changelog = getChangelog()
+			changelog = changes
 			for (version in ((String) project.mod_mc_versions).split(";")) {
 				addGameVersion(version)
 			}
