--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=20w51a
+	minecraft_version=21w15a
 	minecraft_major_version = 1.17
-	yarn_mappings=18:v2
-	loader_version=0.10.8
+	yarn_mappings=16:v2
+	loader_version=0.11.3
 
 # Mod Properties
 	mod_version = 2.0.8
 	mod_release = release
-	mod_mc_version_specifier = 20w49a+
-	mod_mc_versions = 20w49a;20w51a
+	mod_mc_version_specifier = 21w15a+
+	mod_mc_versions = 21w15a
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
