--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'fabric-loom' version '0.7-SNAPSHOT'
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'com.modrinth.minotaur' version '1.1.0'
@@ -18,8 +18,8 @@ minecraft {
 }
 
 repositories {
-	jcenter()
 	maven { url "https://maven.fabricmc.net/" }
+	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.siphalor.de/" }
 }
 
@@ -34,11 +34,11 @@ dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_mappings}"
-	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modCompile "net.fabricmc.fabric-api:fabric-api-base:0.1.2+b7f9825d0c"
+	modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.2+b7f9825d0c"
 	include "net.fabricmc.fabric-api:fabric-api-base:0.1.2+b7f9825d0c"
-	modCompile "net.fabricmc.fabric-api:fabric-networking-v0:0.1.7+12515ed90c"
+	modApi "net.fabricmc.fabric-api:fabric-networking-v0:0.1.7+12515ed90c"
 	include "net.fabricmc.fabric-api:fabric-networking-v0:0.1.7+12515ed90c"
 	modImplementation "net.fabricmc.fabric-api:fabric-registry-sync-v0:0.2.6+f3d8141b0c"
 
@@ -49,7 +49,7 @@ dependencies {
 		transitive false
 	}
 
-	testmodCompile sourceSets.main.output
+	testmodImplementation sourceSets.main.output
 }
 
 license {
