--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'com.modrinth.minotaur' version '1.1.0'
 	id 'org.cadixdev.licenser' version '0.5.0'
+	id "com.github.breadmoirai.github-release" version "2.2.12"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -184,4 +185,16 @@ if (project.hasProperty("siphalorModrinthApi")) {
 		addLoader("fabric")
 	}
 	uploadToModSites.finalizedBy(tasks.modrinth)
+}
+
+if (project.hasProperty("siphalorGitHubToken")) {
+	githubRelease {
+		token siphalorGitHubToken
+		targetCommitish.set("$minecraft_major_version-2.0")
+		releaseName.set("Version $mod_version")
+		body.set(getChangelog())
+		releaseAssets remapJar.getArchiveFile()
+		prerelease.set(mod_release != "release")
+		overwrite.set(true)
+	}
 }
