--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=21w15a
+	minecraft_version=1.17-rc1
 	minecraft_major_version = 1.17
-	yarn_mappings=16:v2
+	yarn_mappings=1:v2
 	loader_version=0.11.3
 
 # Mod Properties
 	mod_version = 2.0.14
 	mod_release = release
-	mod_mc_version_specifier = 21w15a+
-	mod_mc_versions = 21w15a
+	mod_mc_version_specifier = 1.17-pre1+
+	mod_mc_versions = 1.17-pre1;1.17-pre2;1.17-pre3,1.17-pre4;1.17-rc1
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
