--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.7-SNAPSHOT'
+	id 'fabric-loom' version '0.8-SNAPSHOT'
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'com.modrinth.minotaur' version '1.1.0'
@@ -7,8 +7,8 @@ plugins {
 	id "com.github.breadmoirai.github-release" version "2.2.12"
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 archivesBaseName = project.archives_base_name
 version = "${project.mod_version}+mc${project.minecraft_version}"
@@ -38,12 +38,12 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	def fabric_deps = [
-	        'fabric-api-base': '0.2.2+23b3c92e27',
-			'fabric-networking-api-v1': '1.0.7+413ddf6427',
+	        'fabric-api-base': '0.3.0+a02b4463a0.jar',
+			'fabric-networking-api-v1': '1.0.11+b7ab6121a0',
 			'include': false,
-			'fabric-registry-sync-v0': '0.7.8+413ddf6427',
-			'fabric-resource-loader-v0': '0.4.6+12865e7827',
-			'fabric-tag-extensions-v0': '1.1.3+41a6855227'
+			'fabric-registry-sync-v0': '0.7.9+a02b4463a0',
+			'fabric-resource-loader-v0': '0.4.7+b7ab6121a0',
+			'fabric-tag-extensions-v0': '1.1.4+a02b4463a0'
 	]
 
 	def inc = true
@@ -61,9 +61,9 @@ dependencies {
 	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:6.0.247-alpha") {
 		exclude group: "net.fabricmc.fabric-api"
 	}
-	/*modImplementation("de.siphalor:modsoftheworld-1.17:1+") {
+	modImplementation("de.siphalor:modsoftheworld-1.17:1+") {
 		transitive false
-	}*/
+	}
 
 	testmodImplementation sourceSets.main.output
 }
