--- a/build.gradle
+++ b/build.gradle
@@ -197,4 +197,5 @@ if (project.hasProperty("siphalorGitHubToken")) {
 		prerelease.set(mod_release != "release")
 		overwrite.set(true)
 	}
+	uploadToModSites.finalizedBy(tasks.githubRelease)
 }
