--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,8 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_mappings}"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.2+b7f9825d0c"
-	include "net.fabricmc.fabric-api:fabric-api-base:0.1.2+b7f9825d0c"
-	modApi "net.fabricmc.fabric-api:fabric-networking-v0:0.1.7+12515ed90c"
-	include "net.fabricmc.fabric-api:fabric-networking-v0:0.1.7+12515ed90c"
+	include(modApi("net.fabricmc.fabric-api:fabric-api-base:0.1.2+b7f9825d0c"))
+	include(modApi("net.fabricmc.fabric-api:fabric-networking-api-v1:1.0.1+c1455e800c"))
 	modImplementation "net.fabricmc.fabric-api:fabric-registry-sync-v0:0.2.6+f3d8141b0c"
 
 	modImplementation("me.shedaniel:RoughlyEnoughItems:3.6.21") {
