--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 	maven { url "https://maven.fabricmc.net/" }
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.siphalor.de/" }
+	maven { url "https://jitpack.io/" }
 }
 
 sourceSets {
@@ -47,6 +48,8 @@ dependencies {
 	modImplementation("de.siphalor:modsoftheworld-1.15:1+") {
 		transitive false
 	}
+
+	modRuntime("com.github.astei:lazydfu:master-SNAPSHOT")
 
 	testmodImplementation sourceSets.main.output
 }
