--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx1G
 	minecraft_version=1.15.2
 	minecraft_major_version = 1.15
 	yarn_mappings=7:v2
-	loader_version=0.7.6+build.180
+	loader_version=0.11.6
 
 # Mod Properties
 	mod_version = 2.0.19
