--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.9-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'com.modrinth.minotaur' version '1.2.1'
@@ -38,12 +38,12 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	def fabric_deps = [
-	        'fabric-api-base': '0.3.0+a02b446318',
-			'fabric-networking-api-v1': '1.0.13+2e8bd82f18',
+	        'fabric-api-base': '0.4.0+65d505fc9c',
+			'fabric-networking-api-v1': '1.0.16+65d505fc9c',
 			'include': false,
-			'fabric-registry-sync-v0': '0.7.10+e2961fee18',
-			'fabric-resource-loader-v0': '0.4.8+a00e834b18',
-			'fabric-tag-extensions-v0': '1.1.4+a02b446318'
+			'fabric-registry-sync-v0': '0.8.3+2e160e0f9c',
+			'fabric-resource-loader-v0': '0.4.9+65d505fc9c',
+			'fabric-tag-extensions-v0': '1.2.3+65d505fc9c'
 	]
 
 	def inc = true
@@ -61,7 +61,7 @@ dependencies {
 	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:6.0.247-alpha") {
 		exclude group: "net.fabricmc.fabric-api"
 	}
-	modImplementation("de.siphalor:modsoftheworld-1.17:1.0.9+") {
+	modImplementation("de.siphalor:modsoftheworld-$minecraft_major_version:1.0.9+") {
 		transitive false
 	}
 
@@ -115,13 +115,7 @@ publishing {
 	publications {
 		mavenJava(MavenPublication) {
 			artifactId = "${project.archives_base_name}-${project.minecraft_major_version}"
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
+			from components.java
 		}
 	}
 	repositories {
