--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.17.1
-	minecraft_major_version = 1.17
-	yarn_mappings=1:v2
-	loader_version=0.11.6
+	minecraft_version=1.18-pre1
+	minecraft_major_version = 1.18
+	yarn_mappings=3:v2
+	loader_version=0.12.5
 
 # Mod Properties
 	mod_version = 2.1.0
 	mod_release = release
-	mod_mc_version_specifier = 1.17
-	mod_mc_versions = 1.17
+	mod_mc_version_specifier = 1.18-pre1
+	mod_mc_versions = 1.18-pre1
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
