--- a/build.gradle
+++ b/build.gradle
@@ -121,21 +121,8 @@ publishing {
 
 // Mod sites
 
-def getChangelog() {
-	def commits = 'git log -20 --format=oneline'.execute().text.readLines()
-	def versionCommit = null
-	for (commit in commits) {
-		if (commit.contains('Version')) {
-			versionCommit = commit.split(' ')[0]
-			break
-		}
-	}
-	if (versionCommit == null) {
-		return """## Version ${project.mod_version}
-
-No changelog found!"""
-	}
-	return ('git log -1 --format=format:##%x20%s%n%n%b%nRelease%x20by%x20%an ' + versionCommit).execute().text.trim()
+static def getChangelog() {
+	return 'git log -1 --format=format:##%x20%s%n%n%b%nRelease%x20by%x20%an --grep Version'.execute().text.trim()
 }
 
 task uploadToModSites {
