--- a/build.gradle
+++ b/build.gradle
@@ -137,7 +137,7 @@ if (project.hasProperty("siphalorCurseForgeApi")) {
 			id = "314633"
 			releaseType = project.mod_release
 			changelogType = "markdown"
-			changelog = getChangelog()
+			changelog = project.getChangelog()
 			addGameVersion("Fabric")
 			for (version in ((String) project.mod_mc_versions).split(";")) {
 				addGameVersion(version)
