--- a/build.gradle
+++ b/build.gradle
@@ -149,10 +149,9 @@ if (project.hasProperty("siphalorCurseForgeApi")) {
 			changelogType = "markdown"
 			changelog = project.getChangelog()
 			addGameVersion("Fabric")
-			//for (version in ((String) project.mod_mc_versions).split(";")) {
-			//	addGameVersion(version)
-			//}
-			addGameVersion("1.17")
+			for (version in ((String) project.mod_mc_versions).split(";")) {
+				addGameVersion(version)
+			}
 			relations {
 				embeddedLibrary "fabric-api"
 				optionalDependency "roughly-enough-items"
