Trigger Readme update action on self-changes

--- a/.github/workflows/build-example-datapack.yaml
+++ b/.github/workflows/build-example-datapack.yaml
@@ -4,6 +4,7 @@ on:
     push:
         paths:
             - src/testmod/resources/**
+            - .github/workflows/update-readme.yaml
     workflow_dispatch:
 
 jobs:
