update to minecraft 1.19 (and java 17)

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
-	id 'com.modrinth.minotaur' version '2.1.1'
+	id 'com.modrinth.minotaur' version '2.3.3'
 	id 'org.cadixdev.licenser' version '0.6.1'
-	id "com.github.breadmoirai.github-release" version "2.2.12"
+	id "com.github.breadmoirai.github-release" version "2.4.1"
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = "${project.mod_version}+mc${project.minecraft_version}"
@@ -45,9 +45,9 @@ dependencies {
 	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:9.0.491") {
 		exclude group: "net.fabricmc.fabric-api"
 	}
-	//modImplementation("de.siphalor:modsoftheworld-$minecraft_major_version:1.0.9+mc1.18-pre1") {
-	//	transitive false
-	//}
+	modImplementation("de.siphalor:modsoftheworld-${minecraft_major_version}:${project.modsoftheworld_version}") {
+		transitive false
+	}
 
 	modRuntimeOnly("com.github.astei:lazydfu:master-SNAPSHOT")
 
