--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 2.1.3
+	mod_version = 2.1.4
 	mod_release = release
 	mod_mc_version_specifier = 1.19
 	mod_mc_versions = 1.19
@@ -20,3 +20,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 fabric_api_version = 0.56.1+1.19
+modsoftheworld_version = 1.0.9+mc1.19
