--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 2.1.4-beta.1
+	mod_version = 2.1.4
 	mod_release = beta
 	mod_mc_version_specifier = 1.15.x
 	mod_mc_versions = 1.15;1.15.1;1.15.2
