--- a/.github/workflows/build-example-datapack.yaml
+++ b/.github/workflows/build-example-datapack.yaml
@@ -4,7 +4,11 @@ on:
     push:
         paths:
             - src/testmod/resources/**
+            - .github/workflows/build-example-datapack.yaml
             - .github/workflows/update-readme.yaml
+        branches:
+            - "*.*-2.0"
+            
     workflow_dispatch:
 
 jobs:
