--- a/.editorconfig
+++ b/.editorconfig
@@ -278,3 +278,7 @@ ij_markdown_max_lines_between_paragraphs = 1
 ij_markdown_min_lines_around_block_elements = 1
 ij_markdown_min_lines_around_header = 1
 ij_markdown_min_lines_between_paragraphs = 1
+
+[*.g4]
+indent_style = space
+indent_size = 2
