--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ plugins {
 	id 'com.modrinth.minotaur' version '2.1.1'
 	id 'org.cadixdev.licenser' version '0.6.1'
 	id "com.github.breadmoirai.github-release" version "2.2.12"
+	id 'antlr'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -32,6 +33,8 @@ sourceSets {
 }
 
 dependencies {
+	antlr "org.antlr:antlr4:4.10.1"
+
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_mappings}"
@@ -51,6 +54,11 @@ dependencies {
 	modRuntimeOnly("com.github.astei:lazydfu:master-SNAPSHOT")
 
 	testmodImplementation sourceSets.main.output
+}
+
+generateGrammarSource {
+	outputDirectory = outputDirectory.toPath().resolve("de/siphalor/nbtcrafting/dollar/antlr").toFile()
+	arguments = [ "-no-listener", "-visitor" ]
 }
 
 license {
