--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,8 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.6
 
 # Mod Properties
-	mod_version = 2.1.4
-	mod_release = release
+	mod_version = 3.0.0-alpha.1
+	mod_release = alpha
 	mod_mc_version_specifier = 1.15.x
 	mod_mc_versions = 1.15;1.15.1;1.15.2
 	mod_id = nbtcrafting3
