--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.jvmargs=-Xmx1G
 	mod_version = 2.2.0-beta.1
 	mod_release = beta
 	mod_mc_version_specifier = 1.19
-	mod_mc_versions = 1.19
+	mod_mc_versions = 1.19;1.19.1;1.19.2
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
