--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.jvmargs=-Xmx1G
 	mod_version = 2.2.0
 	mod_release = beta
 	mod_mc_version_specifier = 1.16.2+
-	mod_mc_versions = 1.16.2;1.16.3;1.16.4
+	mod_mc_versions = 1.16.2;1.16.3;1.16.4;1.16.5
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
