--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,20 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.19
+	# check these at https://fabricmc.net/develop
+	minecraft_version=1.19.3
 	minecraft_major_version = 1.19
-	yarn_mappings=4:v2
-	loader_version=0.14.10
+	yarn_mappings=2:v2
+	loader_version=0.14.11
 
 # Mod Properties
 	mod_version = 2.2.3
 	mod_release = release
-	mod_mc_version_specifier = 1.19
-	mod_mc_versions = 1.19;1.19.1;1.19.2
+	mod_mc_version_specifier = 1.19.3
+	mod_mc_versions = 1.19.3
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
 # Dependencies
-fabric_api_version = 0.56.1+1.19
+fabric_api_version = 0.68.1+1.19.3
