Update 2.2.7 Merged some changes from Treetrain1

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,11 @@ org.gradle.jvmargs=-Xmx1G
 	# check these on https://fabricmc.net/use
 	minecraft_version=1.19.4
 	minecraft_major_version = 1.19
-	yarn_mappings=1
-	loader_version=0.14.17
+	yarn_mappings=1:v2
+	loader_version=0.14.18
 
 # Mod Properties
-	mod_version = 2.2.6
+	mod_version = 2.2.7
 	mod_release = release
 	mod_mc_version_specifier = 1.19.4
 	mod_mc_versions = 1.19.4
