--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'fabric-loom' version '1.1-SNAPSHOT'
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'com.modrinth.minotaur' version '2.1.1'
@@ -43,14 +43,13 @@ dependencies {
 	modImplementation(fabricApi.module("fabric-registry-sync-v0", fabric_api_version))
 	modImplementation(fabricApi.module("fabric-resource-loader-v0", fabric_api_version))
 
-	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:9.0.491") {
+	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:11.0.597") {
 		exclude group: "net.fabricmc.fabric-api"
 	}
-	modLocalRuntime("dev.emi:emi:0.4.0+1.19")
+//	modLocalRuntime("dev.emi:emi:0.7.2+1.19.4")
 	//modLocalRuntime("de.siphalor:modsoftheworld-$minecraft_major_version:1.0.9+mc1.18-pre1") {
 	//	transitive false
 	//}
-	modLocalRuntime("com.github.astei:lazydfu:master-SNAPSHOT")
 
 	testmodImplementation sourceSets.main.output
 }
