--- a/gradle.properties
+++ b/gradle.properties
@@ -4,19 +4,19 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.19
+	minecraft_version=1.19.4
 	minecraft_major_version = 1.19
-	yarn_mappings=4:v2
-	loader_version=0.14.10
+	yarn_mappings=1:v2
+	loader_version=0.14.18
 
 # Mod Properties
-	mod_version = 2.2.3
+	mod_version = 2.2.4
 	mod_release = release
 	mod_mc_version_specifier = 1.19
-	mod_mc_versions = 1.19;1.19.1;1.19.2
+	mod_mc_versions = 1.19.4
 	mod_id = nbtcrafting
 	maven_group = de.siphalor
 	archives_base_name = nbtcrafting
 
 # Dependencies
-fabric_api_version = 0.56.1+1.19
+fabric_api_version = 0.76.0+1.19.4
