--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.11-SNAPSHOT'
+	id 'fabric-loom' version '1.1.+'
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'com.modrinth.minotaur' version '2.1.1'
@@ -38,15 +38,17 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.minecraft_version}+build.${project.yarn_mappings}"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	include(modApi(fabricApi.module("fabric-api-base", fabric_api_version)))
-	include(modApi(fabricApi.module("fabric-networking-api-v1", fabric_api_version)))
-	modImplementation(fabricApi.module("fabric-registry-sync-v0", fabric_api_version))
-	modImplementation(fabricApi.module("fabric-resource-loader-v0", fabric_api_version))
+	include(modApi(fabricApi.module("fabric-api-base", project.fabric_api_version)))
+	include(modApi(fabricApi.module("fabric-networking-api-v1", project.fabric_api_version)))
+	modImplementation(fabricApi.module("fabric-registry-sync-v0", project.fabric_api_version))
+	modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_api_version))
+	modImplementation(fabricApi.module("fabric-transfer-api-v1", project.fabric_api_version))
 
 	modCompileOnly("me.shedaniel:RoughlyEnoughItems-fabric:9.0.491") {
 		exclude group: "net.fabricmc.fabric-api"
 	}
-	modLocalRuntime("dev.emi:emi:0.4.0+1.19")
+	modCompileOnly("dev.emi:emi:0.4.3+1.19")
+	modLocalRuntime("dev.emi:emi:0.4.3+1.19")
 	//modLocalRuntime("de.siphalor:modsoftheworld-$minecraft_major_version:1.0.9+mc1.18-pre1") {
 	//	transitive false
 	//}
